add some data exploration of features, missing values and value counts.

--- a/prompt_II.ipynb
+++ b/prompt_II.ipynb
@@ -120,7 +120,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "For an initial exploration see file: used-car-inventory-exploration.ipynb in this repository"
+   ]
   },
   {
    "cell_type": "code",
