add business understanding and data exploration sections.

--- a/prompt_II.ipynb
+++ b/prompt_II.ipynb
@@ -42,11 +42,13 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "As a car dealership it is paramount to deeply understand pricing for a given car, given its conditions. If the product is overpriced you run the risk of not attracting customers and loosing their trust. If it is sold too cheaply on the other hand then you are leaving money on the table and putting your profit margins at risk. Thus a model that could predict the right price based on data from hundreds of thousands of vehicles and the features that contribute to that price is a valuable business deliverable. \n",
+    "\n",
+    "In order to better determine what combination of features is valued the most by customers we will study the relationship between the features of the vehicles dataframe inported in this notebook and curated from a larger dataset in Kaggle. Not all features in the dataset are useful or complete so we will need to prepare the data before we can create a model against it."
+   ]
   },
   {
    "cell_type": "code",
