--- a/used-car-inventory-exploration.ipynb
+++ b/used-car-inventory-exploration.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 2,
    "id": "a370b49c-a700-4244-9fa4-baf886a40c3c",
    "metadata": {},
    "outputs": [],
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 3,
    "id": "b31734f1-73e0-478c-bb71-4be66c388f8c",
    "metadata": {},
    "outputs": [
@@ -353,7 +353,7 @@
        "[426880 rows x 18 columns]"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -365,7 +365,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 4,
    "id": "37f6bab0-3851-4acc-8e6c-f949403f1092",
    "metadata": {},
    "outputs": [
@@ -375,7 +375,7 @@
        "426880"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -386,7 +386,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 5,
    "id": "002a6680-0d7b-476e-9d74-ac7ee0d299c1",
    "metadata": {},
    "outputs": [
@@ -396,7 +396,7 @@
        "18"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -407,20 +407,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 6,
    "id": "6bc4561c-cdfd-45e2-ad67-15bcb8afc410",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Index(['region', 'price', 'year', 'manufacturer', 'model', 'condition',\n",
-       "       'cylinders', 'fuel', 'odometer', 'title_status', 'transmission',\n",
+       "Index(['id', 'region', 'price', 'year', 'manufacturer', 'model', 'condition',\n",
+       "       'cylinders', 'fuel', 'odometer', 'title_status', 'transmission', 'VIN',\n",
        "       'drive', 'size', 'type', 'paint_color', 'state'],\n",
        "      dtype='object')"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -431,7 +431,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 7,
    "id": "c2fa0826-8280-4f38-b09a-c1e69448d943",
    "metadata": {},
    "outputs": [
@@ -470,7 +470,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 8,
    "id": "96ab6e33-a7df-4012-acc8-15b2f3610247",
    "metadata": {},
    "outputs": [
@@ -485,7 +485,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -496,7 +496,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 9,
    "id": "895e6cc3-3585-43bc-a3e5-29c88a424926",
    "metadata": {},
    "outputs": [
@@ -515,7 +515,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -526,7 +526,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 10,
    "id": "ab6b81f6-8b8a-49c0-9941-2d477e03bf3e",
    "metadata": {},
    "outputs": [
@@ -547,7 +547,7 @@
        "Name: condition, Length: 426880, dtype: object"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -558,7 +558,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 11,
    "id": "129bb559-82e1-4fb2-b550-568e232afc31",
    "metadata": {},
    "outputs": [
@@ -579,7 +579,7 @@
        "Name: VIN, Length: 426880, dtype: object"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -590,7 +590,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 12,
    "id": "20df8506-b4da-447e-845d-0fb3b3080b49",
    "metadata": {},
    "outputs": [],
@@ -600,7 +600,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 13,
    "id": "d3da319f-9091-4671-98aa-60d6bc2d9c72",
    "metadata": {},
    "outputs": [],
@@ -610,7 +610,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 14,
    "id": "de090362-b1c8-419d-bba9-ba1b91bccce5",
    "metadata": {},
    "outputs": [
@@ -624,7 +624,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -635,7 +635,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 15,
    "id": "23685c95-be24-46ec-ab1e-fb44d74a33c2",
    "metadata": {},
    "outputs": [
@@ -658,7 +658,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -669,7 +669,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 16,
    "id": "768f7d4d-4132-4d37-a26c-7b74c499e32a",
    "metadata": {},
    "outputs": [
@@ -693,7 +693,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -704,7 +704,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 17,
    "id": "2a1f1863-2801-4632-ac3d-8d6ea3acef83",
    "metadata": {},
    "outputs": [
@@ -757,7 +757,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -768,7 +768,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 18,
    "id": "f48fecd7-8133-4ba8-b14a-9baec1dd9269",
    "metadata": {},
    "outputs": [
@@ -785,7 +785,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -796,7 +796,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 19,
    "id": "bc1ac0ee-9974-484b-9bef-eb692501d6c2",
    "metadata": {},
    "outputs": [
@@ -818,7 +818,7 @@
        "Name: count, Length: 29649, dtype: int64"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -829,17 +829,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 20,
    "id": "f354c99b-560b-4f96-a263-13c1f7efeecd",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x7fc35b3d1610>]"
+       "[<matplotlib.lines.Line2D at 0x7f5574a04210>]"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -860,7 +860,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 21,
+   "id": "e24287af-95f3-4014-9d4c-ee4185e7fc2f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "odometer\n",
+       "100000.0    2263\n",
+       "1.0         2246\n",
+       "0.0         1965\n",
+       "200000.0    1728\n",
+       "150000.0    1603\n",
+       "            ... \n",
+       "73769.0        1\n",
+       "232423.0       1\n",
+       "177674.0       1\n",
+       "185657.0       1\n",
+       "90495.0        1\n",
+       "Name: count, Length: 104870, dtype: int64"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data['odometer'].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
    "id": "4502dd8e-0dea-48e9-a043-56a5953faae0",
    "metadata": {},
    "outputs": [
@@ -876,7 +909,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -887,7 +920,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 23,
    "id": "91ee8199-fa8f-436f-9f03-1e485500ddc0",
    "metadata": {},
    "outputs": [
@@ -901,7 +934,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -912,7 +945,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 24,
    "id": "b87b1f2a-0199-48f7-8670-c51186c194b6",
    "metadata": {},
    "outputs": [
@@ -934,7 +967,7 @@
        "Name: count, Length: 114, dtype: int64"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -945,7 +978,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 25,
    "id": "0790b397-debf-4215-a9b3-9772db27f4c9",
    "metadata": {},
    "outputs": [
@@ -967,7 +1000,7 @@
        "Name: count, Length: 404, dtype: int64"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -978,7 +1011,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 26,
    "id": "0ea0c3fa-5283-4618-94a9-0c8102978267",
    "metadata": {},
    "outputs": [
@@ -1000,7 +1033,7 @@
        "Name: count, Length: 15655, dtype: int64"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1013,6 +1046,14 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "85b395fe-4d48-457d-bfc3-36fc393250a2",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "59f19914-05e0-425b-863e-6f020d483e67",
    "metadata": {},
    "outputs": [],
    "source": []
