begin model implementation.

--- a/used-car-inventory-exploration.ipynb
+++ b/used-car-inventory-exploration.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "a370b49c-a700-4244-9fa4-baf886a40c3c",
    "metadata": {},
    "outputs": [],
@@ -10,12 +10,13 @@
     "import pandas as pd\n",
     "import numpy as np\n",
     "import seaborn as sns\n",
-    "import matplotlib.pyplot as plt"
+    "import matplotlib.pyplot as plt\n",
+    "import functions"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "b31734f1-73e0-478c-bb71-4be66c388f8c",
    "metadata": {},
    "outputs": [
@@ -353,7 +354,7 @@
        "[426880 rows x 18 columns]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -526,34 +527,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 3,
    "id": "ab6b81f6-8b8a-49c0-9941-2d477e03bf3e",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0          NaN\n",
-       "1          NaN\n",
-       "2          NaN\n",
-       "3          NaN\n",
-       "4          NaN\n",
-       "          ... \n",
-       "426875    good\n",
-       "426876    good\n",
-       "426877    good\n",
-       "426878    good\n",
-       "426879    good\n",
-       "Name: condition, Length: 426880, dtype: object"
+       "condition\n",
+       "good         121456\n",
+       "excellent    101467\n",
+       "like new      21178\n",
+       "fair           6769\n",
+       "new            1305\n",
+       "salvage         601\n",
+       "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "data['condition']"
+    "data['condition'].value_counts()"
    ]
   },
   {
@@ -586,26 +583,6 @@
    ],
    "source": [
     "data['VIN']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "id": "20df8506-b4da-447e-845d-0fb3b3080b49",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "data = data.drop('VIN', axis=1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "id": "d3da319f-9091-4671-98aa-60d6bc2d9c72",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "data = data.drop('id', axis=1)"
    ]
   },
   {
@@ -1007,6 +984,79 @@
    ],
    "source": [
     "data['region'].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "6c3d050e-5c6c-41c4-9fd0-1e525d101d9a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "state\n",
+       "ca    50614\n",
+       "fl    28511\n",
+       "tx    22945\n",
+       "ny    19386\n",
+       "oh    17696\n",
+       "or    17104\n",
+       "mi    16900\n",
+       "nc    15277\n",
+       "wa    13861\n",
+       "pa    13753\n",
+       "wi    11398\n",
+       "co    11088\n",
+       "tn    11066\n",
+       "va    10732\n",
+       "il    10387\n",
+       "nj     9742\n",
+       "id     8961\n",
+       "az     8679\n",
+       "ia     8632\n",
+       "ma     8174\n",
+       "mn     7716\n",
+       "ga     7003\n",
+       "ok     6792\n",
+       "sc     6327\n",
+       "mt     6294\n",
+       "ks     6209\n",
+       "in     5704\n",
+       "ct     5188\n",
+       "al     4955\n",
+       "md     4778\n",
+       "nm     4425\n",
+       "mo     4293\n",
+       "ky     4149\n",
+       "ar     4038\n",
+       "ak     3474\n",
+       "la     3196\n",
+       "nv     3194\n",
+       "nh     2981\n",
+       "dc     2970\n",
+       "me     2966\n",
+       "hi     2964\n",
+       "vt     2513\n",
+       "ri     2320\n",
+       "sd     1302\n",
+       "ut     1150\n",
+       "wv     1052\n",
+       "ne     1036\n",
+       "ms     1016\n",
+       "de      949\n",
+       "wy      610\n",
+       "nd      410\n",
+       "Name: count, dtype: int64"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data['state'].value_counts()"
    ]
   },
   {
