lasso feature reduction implemented, but mse are bad, needs fix.

--- a/prompt_II.ipynb
+++ b/prompt_II.ipynb
@@ -129,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 1,
    "metadata": {
     "scrolled": true
    },
@@ -468,7 +468,7 @@
        "[426880 rows x 18 columns]"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -478,14 +478,17 @@
     "import numpy as np\n",
     "import seaborn as sns\n",
     "import matplotlib.pyplot as plt\n",
+    "import importlib\n",
     "import functions\n",
+    "importlib.reload(functions)\n",
+    "\n",
     "data = pd.read_csv('data/vehicles.csv')\n",
     "data"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -495,7 +498,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -525,7 +528,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -540,36 +543,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "   price    year manufacturer                     model  condition  \\\n",
-      "0  33590  2014.0          gmc  sierra 1500 crew cab slt       good   \n",
-      "1  22590  2010.0    chevrolet            silverado 1500       good   \n",
-      "2  39590  2020.0    chevrolet       silverado 1500 crew       good   \n",
-      "3  30990  2017.0       toyota      tundra double cab sr       good   \n",
-      "4  15000  2013.0         ford                 f-150 xlt  excellent   \n",
-      "\n",
-      "     cylinders fuel  odometer title_status transmission    drive       size  \\\n",
-      "0  8 cylinders  gas   57923.0        clean        other  unknown    unknown   \n",
-      "1  8 cylinders  gas   71229.0        clean        other  unknown    unknown   \n",
-      "2  8 cylinders  gas   19160.0        clean        other  unknown    unknown   \n",
-      "3  8 cylinders  gas   41124.0        clean        other  unknown    unknown   \n",
-      "4  6 cylinders  gas  128000.0        clean    automatic      rwd  full-size   \n",
-      "\n",
-      "     type paint_color state  \n",
-      "0  pickup       white    al  \n",
-      "1  pickup        blue    al  \n",
-      "2  pickup         red    al  \n",
-      "3  pickup         red    al  \n",
-      "4   truck       black    al  \n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# For features with less than 10% missing data remove rows\n",
     "data = data.dropna(subset=['manufacturer', 'model', 'price', 'odometer', 'fuel', \n",
@@ -581,7 +557,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -616,14 +592,55 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Numeric Features: ['year', 'odometer']\n",
+      "age\n",
+      "4.0      34964\n",
+      "5.0      34830\n",
+      "7.0      29687\n",
+      "9.0      28905\n",
+      "8.0      28572\n",
+      "         ...  \n",
+      "79.0         1\n",
+      "107.0        1\n",
+      "104.0        1\n",
+      "100.0        1\n",
+      "77.0         1\n",
+      "Name: count, Length: 107, dtype: int64\n"
+     ]
+    }
+   ],
+   "source": [
+    "# The year feature to be pertinent should be calculated as age the max value for year in the dataset is 2022 so we'll use that as the Now date\n",
+    "\n",
+    "# Ensure the 'year' column is numeric\n",
+    "data['year'] = pd.to_numeric(data['year'], errors='coerce')\n",
+    "\n",
+    "# Calculate the age\n",
+    "now = 2022\n",
+    "data['age'] = now - data['year']\n",
+    "\n",
+    "# Drop the year column\n",
+    "data.drop('year', axis=1, inplace=True)\n",
+    "\n",
+    "print(data['age'].value_counts())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Numeric Features: ['odometer', 'age']\n",
       "Categorical Features: ['manufacturer', 'condition', 'cylinders', 'fuel', 'title_status', 'transmission', 'drive', 'size', 'type', 'paint_color', 'state']\n"
      ]
     }
@@ -638,27 +655,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/elmunoz42/anaconda3/lib/python3.11/site-packages/sklearn/preprocessing/_encoders.py:868: FutureWarning: `sparse` was renamed to `sparse_output` in version 1.2 and will be removed in 1.4. `sparse_output` is ignored unless you leave `sparse` to its default value.\n",
-      "  warnings.warn(\n"
-     ]
-    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "       year  odometer  manufacturer_alfa-romeo  manufacturer_aston-martin  \\\n",
-      "0  0.275167 -0.201579                      0.0                        0.0   \n",
-      "1 -0.190165 -0.131525                      0.0                        0.0   \n",
-      "2  0.973165 -0.405660                      0.0                        0.0   \n",
-      "3  0.624166 -0.290023                      0.0                        0.0   \n",
-      "4  0.158834  0.167365                      0.0                        0.0   \n",
+      "   odometer       age  manufacturer_alfa-romeo  manufacturer_aston-martin  \\\n",
+      "0 -0.201579 -0.275167                      0.0                        0.0   \n",
+      "1 -0.131525  0.190165                      0.0                        0.0   \n",
+      "2 -0.405660 -0.973165                      0.0                        0.0   \n",
+      "3 -0.290023 -0.624166                      0.0                        0.0   \n",
+      "4  0.167365 -0.158834                      0.0                        0.0   \n",
       "\n",
       "   manufacturer_audi  manufacturer_bmw  manufacturer_buick  \\\n",
       "0                0.0               0.0                 0.0   \n",
@@ -696,38 +705,36 @@
    "source": [
     "from sklearn.preprocessing import StandardScaler, OneHotEncoder\n",
     "from sklearn.compose import ColumnTransformer\n",
+    "import warnings\n",
+    "warnings.filterwarnings(\"ignore\", category=FutureWarning)\n",
     "# from sklearn.compose import make_column_transformer, make_column_selector\n",
     "\n",
     "# print(X_train.head())\n",
     "# sys.exit(\"Stopping the script\")\n",
     "\n",
-    "\n",
-    "\n",
-    "# Create the ColumnTransformer\n",
+    "# Create the ColumnTransformer without 'price'\n",
     "preprocessor = ColumnTransformer(\n",
     "    transformers=[\n",
     "        ('num', StandardScaler(), numeric_features),\n",
     "        ('cat', OneHotEncoder(drop='first', sparse=False), categorical_features)\n",
     "    ])\n",
     "\n",
-    "# Fit the preprocessor to your data\n",
-    "preprocessor.fit(data)\n",
+    "# Fit the preprocessor to your data without 'price'\n",
+    "preprocessor.fit(data.drop(columns=['price']))\n",
     "\n",
-    "# Transform the data\n",
-    "data_preprocessed = preprocessor.transform(data)\n",
+    "# Transform the data without 'price'\n",
+    "data_preprocessed = preprocessor.transform(data.drop(columns=['price']))\n",
     "\n",
-    "# Convert the preprocessed data to a DataFrame\n",
     "# Get feature names from the preprocessor\n",
     "feature_names = (numeric_features + \n",
     "                 preprocessor.named_transformers_['cat']\n",
     "                 .get_feature_names_out(categorical_features).tolist())\n",
     "\n",
-    "# Create the DataFrame\n",
+    "# Create the DataFrame with the preprocessed features\n",
     "data_pre = pd.DataFrame(data_preprocessed, columns=feature_names, index=data.index)\n",
     "\n",
-    "# If you want to include the target variable (assuming it's 'price')\n",
-    "if 'price' in data.columns:\n",
-    "    data_pre['price'] = data['price']\n",
+    "# Include the 'price' column separately\n",
+    "data_pre['price'] = data['price']\n",
     "\n",
     "print(data_pre.head())\n",
     "print(data_pre.shape)"
@@ -744,28 +751,75 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[  38267.54102696   42213.64590258  -30904.18823009 ...   19956.37016397\n",
-      " -144027.8906243    53646.36673642]\n",
-      "Mean Squared Error: 307503274976714.06\n",
-      "R-squared Score: 8.087722405114572e-05\n"
+      "            odometer            age  manufacturer_alfa-romeo  \\\n",
+      "count  317067.000000  317067.000000            317067.000000   \n",
+      "mean        0.000475      -0.000517                 0.002189   \n",
+      "std         1.016156       1.000755                 0.046734   \n",
+      "min        -0.506534      -1.205832                 0.000000   \n",
+      "25%        -0.305415      -0.624166                 0.000000   \n",
+      "50%        -0.055748      -0.275167                 0.000000   \n",
+      "75%         0.193689       0.306498                 0.000000   \n",
+      "max        52.141837      12.986802                 1.000000   \n",
+      "\n",
+      "       manufacturer_aston-martin  manufacturer_audi  manufacturer_bmw  \\\n",
+      "count              317067.000000      317067.000000     317067.000000   \n",
+      "mean                    0.000054           0.018741          0.036276   \n",
+      "std                     0.007322           0.135607          0.186977   \n",
+      "min                     0.000000           0.000000          0.000000   \n",
+      "25%                     0.000000           0.000000          0.000000   \n",
+      "50%                     0.000000           0.000000          0.000000   \n",
+      "75%                     0.000000           0.000000          0.000000   \n",
+      "max                     1.000000           1.000000          1.000000   \n",
+      "\n",
+      "       manufacturer_buick  manufacturer_cadillac  manufacturer_chevrolet  \\\n",
+      "count       317067.000000          317067.000000           317067.000000   \n",
+      "mean             0.013603               0.017126                0.133833   \n",
+      "std              0.115835               0.129740                0.340473   \n",
+      "min              0.000000               0.000000                0.000000   \n",
+      "25%              0.000000               0.000000                0.000000   \n",
+      "50%              0.000000               0.000000                0.000000   \n",
+      "75%              0.000000               0.000000                0.000000   \n",
+      "max              1.000000               1.000000                1.000000   \n",
+      "\n",
+      "       manufacturer_chrysler  ...       state_sd       state_tn  \\\n",
+      "count          317067.000000  ...  317067.000000  317067.000000   \n",
+      "mean                0.014842  ...       0.003075       0.026414   \n",
+      "std                 0.120922  ...       0.055368       0.160363   \n",
+      "min                 0.000000  ...       0.000000       0.000000   \n",
+      "25%                 0.000000  ...       0.000000       0.000000   \n",
+      "50%                 0.000000  ...       0.000000       0.000000   \n",
+      "75%                 0.000000  ...       0.000000       0.000000   \n",
+      "max                 1.000000  ...       1.000000       1.000000   \n",
+      "\n",
+      "            state_tx       state_ut       state_va       state_vt  \\\n",
+      "count  317067.000000  317067.000000  317067.000000  317067.000000   \n",
+      "mean        0.053717       0.002548       0.025231       0.005929   \n",
+      "std         0.225459       0.050417       0.156827       0.076774   \n",
+      "min         0.000000       0.000000       0.000000       0.000000   \n",
+      "25%         0.000000       0.000000       0.000000       0.000000   \n",
+      "50%         0.000000       0.000000       0.000000       0.000000   \n",
+      "75%         0.000000       0.000000       0.000000       0.000000   \n",
+      "max         1.000000       1.000000       1.000000       1.000000   \n",
+      "\n",
+      "            state_wa       state_wi       state_wv       state_wy  \n",
+      "count  317067.000000  317067.000000  317067.000000  317067.000000  \n",
+      "mean        0.032189       0.026953       0.002485       0.001403  \n",
+      "std         0.176501       0.161947       0.049791       0.037437  \n",
+      "min         0.000000       0.000000       0.000000       0.000000  \n",
+      "25%         0.000000       0.000000       0.000000       0.000000  \n",
+      "50%         0.000000       0.000000       0.000000       0.000000  \n",
+      "75%         0.000000       0.000000       0.000000       0.000000  \n",
+      "max         1.000000       1.000000       1.000000       1.000000  \n",
+      "\n",
+      "[8 rows x 150 columns]\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "['ridge_model.joblib']"
-      ]
-     },
-     "execution_count": 58,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -784,9 +838,40 @@
     "# Split the data\n",
     "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)\n",
     "\n",
-    "\n",
-    "# Create pipeline\n",
+    "# Check some stats for your features\n",
+    "print(X_train.describe())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[  38269.45720899   42211.50216263  -30907.1526138  ...   19957.40721827\n",
+      " -144028.092831     53635.38326477]\n",
+      "Mean Squared Error: 307503277405312.5\n",
+      "R-squared Score: 8.086932689288506e-05\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "['ridge_model.joblib']"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Create Ridge pipeline\n",
     "model = Pipeline([\n",
+    "    ('scaler', StandardScaler()),  # Ensure scaling within pipeline\n",
     "    ('regressor', Ridge())\n",
     "])\n",
     "\n",
@@ -797,7 +882,6 @@
     "y_pred = model.predict(X_test)\n",
     "\n",
     "print(y_pred)\n",
-    "# sys.exit(\"Stopping the script\")\n",
     "\n",
     "# Evaluate the model\n",
     "mse = mean_squared_error(y_test, y_pred)\n",
@@ -812,10 +896,101 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number of selected features: 22\n",
+      "Selected features:\n",
+      "manufacturer_aston-martin\n",
+      "manufacturer_datsun\n",
+      "manufacturer_harley-davidson\n",
+      "manufacturer_jeep\n",
+      "manufacturer_mercedes-benz\n",
+      "manufacturer_ram\n",
+      "manufacturer_toyota\n",
+      "manufacturer_volvo\n",
+      "condition_fair\n",
+      "cylinders_12 cylinders\n",
+      "cylinders_5 cylinders\n",
+      "fuel_hybrid\n",
+      "title_status_missing\n",
+      "title_status_parts only\n",
+      "transmission_manual\n",
+      "size_full-size\n",
+      "type_offroad\n",
+      "type_pickup\n",
+      "state_in\n",
+      "state_md\n",
+      "state_nj\n",
+      "state_or\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.linear_model import LassoCV\n",
+    "from sklearn.feature_selection import SelectFromModel\n",
+    "\n",
+    "# Perform Lasso with cross-validation. We will try 100 different penalty values from a logarythmic scale\n",
+    "lasso_cv = LassoCV(cv=5, random_state=42, max_iter=10000, eps=0.001, n_alphas=100, \n",
+    "                       alphas=np.logspace(-4, 0, 100))\n",
+    "lasso_cv.fit(X_train, y_train)\n",
+    "\n",
+    "# Create a selector using the best alpha from LassoCV\n",
+    "selector = SelectFromModel(lasso_cv, \n",
+    "                           prefit=True, threshold='1.5*mean')\n",
+    "\n",
+    "# Get the selected feature mask and feature names\n",
+    "selected_feat_mask = selector.get_support()\n",
+    "selected_features = X.columns[selected_feat_mask].tolist()\n",
+    "\n",
+    "# Print the number of selected features and their names\n",
+    "print(f\"Number of selected features: {len(selected_features)}\")\n",
+    "print(\"Selected features:\")\n",
+    "for feature in selected_features:\n",
+    "    print(feature)\n",
+    "\n",
+    "# Create a new dataframe with only the selected features\n",
+    "X2 = X[selected_features]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Resplit data with less features now\n",
+    "# y is same as before\n",
+    "y = data_pre['price']\n",
+    "# Split the data\n",
+    "X2_train, X2_test, y_train, y_test = train_test_split(X2, y, test_size=0.2, random_state=42)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[84154251803715.81, 83444056190245.77]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Create Linear Regression Model. ## TOO RESOURCE INTENSIVE NEED TO REDUCE FEATURES FIRST\n",
+    "\n",
+    "# Experiment with different degree of polynomials\n",
+    "lr_mses = functions.mse_for_different_degrees(X2_train,y_train,1,3)\n",
+    "\n",
+    "print(lr_mses)"
+   ]
   },
   {
    "cell_type": "code",
