--- a/used-car-inventory-exploration.ipynb
+++ b/used-car-inventory-exploration.ipynb
@@ -955,6 +955,27 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 4,
+   "id": "6246dd4a-c2a8-43b0-9898-02ddd82c6979",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2022.0"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data['year'].max()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 25,
    "id": "0790b397-debf-4215-a9b3-9772db27f4c9",
    "metadata": {},
